@@ -23,6 +23,8 @@ changed user levels to leech, user, moderator, admin, elite
 
 added support for the wallop command (627)
 
+added support for ban, unban and banlist (612, 614, 615, 616, 629)
+
 Changes from 0.07
 =================
 
